@@ -27,7 +27,7 @@
           }
           window.location.href = next;
         }
-      }, {scope: '{{facebook_perms}}' });
+      }, {{fb_login_options}});
     }
   };
   (function(d){
