@@ -1,3 +1,8 @@
+2013-02-09  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* Added support for passing along extra parameters to the
+	`FB.login` API call (`FB_LOGIN`).
+
 2013-01-30  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* Version 0.9.0 released.
